@@ -58,30 +58,50 @@ public class NGOProfileService {
     @Autowired
     private SubscriptionPlanRepository planRepo;
 
+    @Autowired
+    private VolunteerRequestRepository volunteerRequestRepository;
+
 
     private void validateNgoStatusChange(AssignmentStatus oldStatus, AssignmentStatus newStatus) {
 
-        if (newStatus == AssignmentStatus.IN_PROGRESS &&
+        if (newStatus == AssignmentStatus.COMPLETED &&
                 oldStatus == AssignmentStatus.ASSIGNED) return;
 
-        if (newStatus == AssignmentStatus.COMPLETED &&
-                oldStatus == AssignmentStatus.IN_PROGRESS) return;
-
-        if (newStatus == AssignmentStatus.REJECTED_BY_RECEIVER &&
-                (oldStatus == AssignmentStatus.ASSIGNED || oldStatus == AssignmentStatus.IN_PROGRESS)) return;
+        if ((newStatus == AssignmentStatus.REJECTED_BY_RECEIVER || newStatus == AssignmentStatus.CANCELLED_BY_DONOR)&&
+                (oldStatus == AssignmentStatus.ASSIGNED )) return;
 
         throw new RuntimeException("Invalid status transition");
     }
-    public List<AssignedOfferDto> getAssignedOffers(Long ngoUserId) {
+
+    public List<AssignedOfferDto> getAssignedOffers(Long ngoUserId, String view) {
+
+        List<DonationOfferStatus> statuses;
+
+        if ("HISTORY".equalsIgnoreCase(view)) {
+            statuses = List.of(
+                    DonationOfferStatus.COMPLETED,
+                    DonationOfferStatus.CANCELLED,
+                    DonationOfferStatus.EXPIRED
+            );
+        } else {
+            statuses = List.of(
+                    DonationOfferStatus.ASSIGNED,
+                    DonationOfferStatus.IN_PROGRESS,
+                    DonationOfferStatus.DELIVERED
+            );
+        }
 
         List<ModeratorAssignmentEntity> assignments =
-                assignmentRepository.findAllAssignmentsForNgo(ngoUserId);
+                assignmentRepository
+                        .findByReceiver_IdAndDonationRequest_StatusInOrderByCreatedAtDesc(
+                                ngoUserId, statuses
+                        );
 
         return assignments.stream()
                 .map(a -> {
                     DonationOfferEntity offer = a.getDonationRequest();
-                    AssignedOfferDto dto = new AssignedOfferDto();
 
+                    AssignedOfferDto dto = new AssignedOfferDto();
                     dto.setAmount(offer.getAmount());
                     dto.setAssignmentId(a.getId());
                     dto.setDonationOfferId(offer.getId());
@@ -90,6 +110,7 @@ public class NGOProfileService {
                     dto.setLocation(offer.getLocation());
                     dto.setDonorName(offer.getUser().getFullName());
                     dto.setDonorPhone(offer.getUser().getMobileNumber());
+                    dto.setDonationStatus(offer.getStatus());
                     dto.setAssignmentStatus(a.getStatus());
                     dto.setAssignedAt(a.getCreatedAt());
                     dto.setOfferCreatedAt(offer.getCreatedAt());
@@ -100,8 +121,39 @@ public class NGOProfileService {
 
                     return dto;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
+//    public List<AssignedOfferDto> getAssignedOffers(Long ngoUserId) {
+//
+//        List<ModeratorAssignmentEntity> assignments =
+//                assignmentRepository.findAllAssignmentsForNgo(ngoUserId);
+//
+//        return assignments.stream()
+//                .map(a -> {
+//                    DonationOfferEntity offer = a.getDonationRequest();
+//                    AssignedOfferDto dto = new AssignedOfferDto();
+//
+//                    dto.setAmount(offer.getAmount());
+//                    dto.setAssignmentId(a.getId());
+//                    dto.setDonationOfferId(offer.getId());
+//                    dto.setReason(offer.getReason());
+//                    dto.setDonationCategory(offer.getDonationCategory().name());
+//                    dto.setLocation(offer.getLocation());
+//                    dto.setDonorName(offer.getUser().getFullName());
+//                    dto.setDonorPhone(offer.getUser().getMobileNumber());
+//                    dto.setDonationStatus(offer.getStatus());
+//                    dto.setAssignmentStatus(a.getStatus());
+//                    dto.setAssignedAt(a.getCreatedAt());
+//                    dto.setOfferCreatedAt(offer.getCreatedAt());
+//                    dto.setTimeLine(offer.getTimeLine());
+//                    dto.setItemDetails(offer.getItemDetails());
+//                    dto.setQuantity(offer.getQuantity());
+//                    dto.setHelpType(offer.getHelpType().name());
+//
+//                    return dto;
+//                })
+//                .collect(Collectors.toList());
+//    }
 
 //    public List<VolunteerOffersRequestDto> getAssignedVolunteers(Long ngoUserId) {
 //
@@ -137,11 +189,67 @@ public class NGOProfileService {
 //                })
 //                .collect(Collectors.toList());
 //    }
+//
+//    public List<AssignedVolunteerDto> getAssignedVolunteers(Long ngoUserId) {
+//
+//        List<VolunteerAssignmentEntity> assignments =
+//                volunteerAssignmentRepository.findAllAssignmentsForNgo(ngoUserId);
+//
+//        return assignments.stream()
+//                .map(a -> {
+//                    VolunteerRequestEntity vr = a.getVolunteerRequest();
+//                    UserEntity volunteer = a.getVolunteer();
+//
+//                    AssignedVolunteerDto dto = new AssignedVolunteerDto();
+//
+//                    // Assignment info
+//                    dto.setAssignmentId(a.getId());
+//                    dto.setAssignmentStatus(a.getStatus());
+//                    dto.setAssignedAt(a.getCreatedAt());
+//
+//                    // Volunteer request info
+//                    dto.setVolunteerRequestId(vr.getId());
+//                    dto.setVolunteerType(vr.getVolunteerType().name());
+//                    dto.setAvailability(vr.getAvailability());
+//                    dto.setSkills(vr.getSkills());
+//                    dto.setLocation(vr.getLocation());
+//                    dto.setPreferredContact(vr.getPreferredContact());
+//                    dto.setReason(vr.getReason());
+//                    dto.setStatus(vr.getStatus());
+//                    dto.setRequestCreatedAt(vr.getCreatedAt());
+//
+//                    // Volunteer (individual user)
+//                    dto.setUserId(volunteer.getId());
+//                    dto.setUserName(volunteer.getFullName());
+//                    dto.setUserEmail(volunteer.getEmail());
+//                    dto.setUserMobile(volunteer.getMobileNumber());
+//
+//                    return dto;
+//                })
+//                .collect(Collectors.toList());
+//    }
 
-    public List<AssignedVolunteerDto> getAssignedVolunteers(Long ngoUserId) {
+    public List<AssignedVolunteerDto> getAssignedVolunteers(Long ngoUserId, String view) {
+
+        List<AssignmentStatus> statuses;
+
+        if ("HISTORY".equalsIgnoreCase(view)) {
+            statuses = List.of(
+                    AssignmentStatus.COMPLETED,
+                    AssignmentStatus.REJECTED_BY_RECEIVER
+            );
+        } else {
+            statuses = List.of(
+                    AssignmentStatus.ASSIGNED,
+                    AssignmentStatus.IN_PROGRESS
+            );
+        }
 
         List<VolunteerAssignmentEntity> assignments =
-                volunteerAssignmentRepository.findAllAssignmentsForNgo(ngoUserId);
+                volunteerAssignmentRepository
+                        .findByReceiver_IdAndStatusInOrderByCreatedAtDesc(
+                                ngoUserId, statuses
+                        );
 
         return assignments.stream()
                 .map(a -> {
@@ -150,12 +258,10 @@ public class NGOProfileService {
 
                     AssignedVolunteerDto dto = new AssignedVolunteerDto();
 
-                    // Assignment info
                     dto.setAssignmentId(a.getId());
                     dto.setAssignmentStatus(a.getStatus());
                     dto.setAssignedAt(a.getCreatedAt());
 
-                    // Volunteer request info
                     dto.setVolunteerRequestId(vr.getId());
                     dto.setVolunteerType(vr.getVolunteerType().name());
                     dto.setAvailability(vr.getAvailability());
@@ -166,7 +272,6 @@ public class NGOProfileService {
                     dto.setStatus(vr.getStatus());
                     dto.setRequestCreatedAt(vr.getCreatedAt());
 
-                    // Volunteer (individual user)
                     dto.setUserId(volunteer.getId());
                     dto.setUserName(volunteer.getFullName());
                     dto.setUserEmail(volunteer.getEmail());
@@ -174,7 +279,7 @@ public class NGOProfileService {
 
                     return dto;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
@@ -265,7 +370,179 @@ public class NGOProfileService {
 
 
     @Transactional
-    public String updateAssignedOfferStatus(Long ngoId, Long assignmentId, AssignmentStatus newStatus) {
+    public String updateDonationProgress(Long ngoId,
+                                         Long offerId,
+                                         DonationOfferStatus newStatus) {
+
+        DonationOfferEntity offer = donationOfferRepository.findById(offerId)
+                .orElseThrow(() -> new RuntimeException("Offer not found"));
+
+        // Ensure this NGO is assigned
+        ModeratorAssignmentEntity assignment =
+                assignmentRepository.findTopByDonationRequest_IdAndStatusInOrderByCreatedAtDesc(
+                        offerId,
+                        List.of(AssignmentStatus.ASSIGNED)
+                ).orElseThrow(() -> new RuntimeException("No active assignment"));
+
+        if (!assignment.getReceiver().getId().equals(ngoId)) {
+            throw new RuntimeException("Unauthorized");
+        }
+
+        validateNgoProgressChange(offer.getStatus(), newStatus);
+
+        offer.setStatus(newStatus);
+        donationOfferRepository.save(offer);
+
+        return "Donation status updated successfully";
+    }
+
+    private void validateNgoProgressChange(DonationOfferStatus oldStatus,
+                                           DonationOfferStatus newStatus) {
+
+        if (newStatus == DonationOfferStatus.IN_PROGRESS &&
+                oldStatus == DonationOfferStatus.ASSIGNED) return;
+
+        if (newStatus == DonationOfferStatus.DELIVERED &&
+                oldStatus == DonationOfferStatus.IN_PROGRESS) return;
+
+        throw new RuntimeException("Invalid status transition");
+    }
+
+//    @Transactional
+//    public String updateAssignedOfferStatus(Long ngoId, Long assignmentId, AssignmentStatus newStatus) {
+//
+//        ModeratorAssignmentEntity assignment = assignmentRepository.findById(assignmentId)
+//                .orElseThrow(() -> new RuntimeException("Assignment not found"));
+//
+//        if (!assignment.getReceiver().getId().equals(ngoId)) {
+//            throw new RuntimeException("Not allowed");
+//        }
+//        if (!assignment.isActive()) {
+//            throw new RuntimeException("Cannot update historical assignment");
+//        }
+//
+//        // Validate allowed transitions
+//        validateNgoStatusChange(assignment.getStatus(), newStatus);
+//
+//        // Update assignment status
+//        assignment.setStatus(newStatus);
+//
+//        // Update donation offer status automatically
+//        DonationOfferEntity offer = assignment.getDonationRequest();
+//        offer.setStatus(mapToDonationOfferStatus(newStatus));
+//
+//        donationOfferRepository.save(offer);
+//
+//        assignmentRepository.save(assignment);
+//        if(AssignmentStatus.COMPLETED == newStatus){
+//            completeAssignment(offer.getAmount(),assignment);
+//        }
+//
+//        return "Status updated successfully";
+//    }
+
+//    @Transactional
+//    public String updateAssignedOfferStatus(Long ngoId,
+//                                            Long assignmentId,
+//                                            DonationOfferStatus newStatus) {
+//
+//        // Fetch assignment
+//        ModeratorAssignmentEntity assignment = assignmentRepository.findById(assignmentId)
+//                .orElseThrow(() -> new RuntimeException("Assignment not found"));
+//
+//        // Security check
+//        if (!assignment.getReceiver().getId().equals(ngoId)) {
+//            throw new RuntimeException("Not allowed");
+//        }
+//
+//        if (!assignment.isActive()) {
+//            throw new RuntimeException("Cannot update historical assignment");
+//        }
+//
+//        DonationOfferEntity offer = assignment.getDonationRequest();
+//
+//        // Validate NGO allowed transitions
+//        validateNgoDonationProgress(offer.getStatus(), newStatus);
+//
+//        // Update donation progress only
+//        offer.setStatus(newStatus);
+//        donationOfferRepository.save(offer);
+//
+//        return "Donation progress updated successfully";
+//    }
+
+//    @Transactional
+//    public String updateAssignedOfferStatus(Long ngoId,
+//                                            Long assignmentId,
+//                                            AssignmentStatus newStatus) {
+//
+//        ModeratorAssignmentEntity assignment = assignmentRepository.findById(assignmentId)
+//                .orElseThrow(() -> new RuntimeException("Assignment not found"));
+//
+//        if (!assignment.getReceiver().getId().equals(ngoId)) {
+//            throw new RuntimeException("Not allowed");
+//        }
+//
+//        if (!assignment.isActive()) {
+//            throw new RuntimeException("Cannot update historical assignment");
+//        }
+//
+//        DonationOfferEntity offer = assignment.getDonationRequest();
+//
+//        // --- NGO Reject ---
+//        if (newStatus == AssignmentStatus.REJECTED_BY_RECEIVER) {
+//
+//            assignment.setStatus(AssignmentStatus.REJECTED_BY_RECEIVER);
+//            assignmentRepository.save(assignment);
+//
+//            offer.setStatus(DonationOfferStatus.OPEN);
+//            donationOfferRepository.save(offer);
+//
+//            return "Assignment rejected";
+//        }
+//
+//        // --- Start Work ---
+//        if (newStatus == AssignmentStatus.IN_PROGRESS &&
+//                assignment.getStatus() == AssignmentStatus.ASSIGNED) {
+//
+//            assignment.setStatus(AssignmentStatus.IN_PROGRESS);
+//            offer.setStatus(DonationOfferStatus.IN_PROGRESS);
+//        }
+//
+//        // --- Mark Delivered ---
+//        else if (newStatus == AssignmentStatus.COMPLETED &&
+//                assignment.getStatus() == AssignmentStatus.IN_PROGRESS) {
+//
+//            assignment.setStatus(AssignmentStatus.COMPLETED);
+//            offer.setStatus(DonationOfferStatus.DELIVERED);
+//        }
+//
+//        else {
+//            throw new RuntimeException("Invalid status transition");
+//        }
+//
+//        assignmentRepository.save(assignment);
+//        donationOfferRepository.save(offer);
+//
+//        return "Status updated successfully";
+//    }
+//
+//    private void validateNgoDonationProgress(DonationOfferStatus oldStatus,
+//                                             DonationOfferStatus newStatus) {
+//
+//        if (newStatus == DonationOfferStatus.IN_PROGRESS &&
+//                oldStatus == DonationOfferStatus.ASSIGNED) return;
+//
+//        if (newStatus == DonationOfferStatus.COMPLETED &&
+//                oldStatus == DonationOfferStatus.IN_PROGRESS) return;
+//
+//        throw new RuntimeException("Invalid status transition");
+//    }
+
+    @Transactional
+    public String updateAssignedOfferStatus(Long ngoId,
+                                            Long assignmentId,
+                                            DonationOfferStatus newStatus) {
 
         ModeratorAssignmentEntity assignment = assignmentRepository.findById(assignmentId)
                 .orElseThrow(() -> new RuntimeException("Assignment not found"));
@@ -273,28 +550,46 @@ public class NGOProfileService {
         if (!assignment.getReceiver().getId().equals(ngoId)) {
             throw new RuntimeException("Not allowed");
         }
+
         if (!assignment.isActive()) {
             throw new RuntimeException("Cannot update historical assignment");
         }
 
-        // Validate allowed transitions
-        validateNgoStatusChange(assignment.getStatus(), newStatus);
-
-        // Update assignment status
-        assignment.setStatus(newStatus);
-
-        // Update donation offer status automatically
         DonationOfferEntity offer = assignment.getDonationRequest();
-        offer.setStatus(mapToDonationOfferStatus(newStatus));
+
+        // --- NGO Reject ---
+        if (newStatus == DonationOfferStatus.CANCELLED) {
+
+            assignment.setStatus(AssignmentStatus.REJECTED_BY_RECEIVER);
+            assignmentRepository.save(assignment);
+
+            offer.setStatus(DonationOfferStatus.OPEN);
+            donationOfferRepository.save(offer);
+
+            return "Assignment rejected";
+        }
+
+        // --- Start Work ---
+        if (newStatus == DonationOfferStatus.IN_PROGRESS &&
+                offer.getStatus() == DonationOfferStatus.ASSIGNED) {
+
+            offer.setStatus(DonationOfferStatus.IN_PROGRESS);
+        }
+
+        // --- Mark Delivered ---
+        else if (newStatus == DonationOfferStatus.DELIVERED &&
+                offer.getStatus() == DonationOfferStatus.IN_PROGRESS) {
+
+            offer.setStatus(DonationOfferStatus.DELIVERED);
+        }
+
+        else {
+            throw new RuntimeException("Invalid status transition");
+        }
 
         donationOfferRepository.save(offer);
 
-        assignmentRepository.save(assignment);
-        if(AssignmentStatus.COMPLETED == newStatus){
-            completeAssignment(offer.getAmount(),assignment);
-        }
-
-        return "Status updated successfully";
+        return "Donation progress updated";
     }
 
     public void completeAssignment(Long offerAmount,ModeratorAssignmentEntity assignmentEntity) {
@@ -320,9 +615,6 @@ public class NGOProfileService {
     private DonationOfferStatus mapToDonationOfferStatus(AssignmentStatus status) {
 
         switch (status) {
-            case IN_PROGRESS:
-                return DonationOfferStatus.IN_PROGRESS;
-
             case COMPLETED:
                 return DonationOfferStatus.COMPLETED;
 
@@ -388,22 +680,73 @@ public class NGOProfileService {
         }
     }
 
-    private void validateNgoVolunteerStatusChange(
-            AssignmentStatus oldStatus,
-            AssignmentStatus newStatus
-    ) {
+//    private void validateNgoVolunteerStatusChange(
+//            AssignmentStatus oldStatus,
+//            AssignmentStatus newStatus
+//    ) {
+//
+//
+//        if (newStatus == AssignmentStatus.COMPLETED &&
+//                oldStatus == AssignmentStatus.ASSIGNED) return;
+//
+//        if (newStatus == AssignmentStatus.REJECTED_BY_RECEIVER &&
+//                (oldStatus == AssignmentStatus.ASSIGNED || oldStatus == AssignmentStatus.IN_PROGRESS)) return;
+//
+//        throw new RuntimeException("Invalid volunteer status transition");
+//    }
+private void validateNgoVolunteerStatusChange(
+        AssignmentStatus oldStatus,
+        AssignmentStatus newStatus
+) {
 
-        if (newStatus == AssignmentStatus.IN_PROGRESS &&
-                oldStatus == AssignmentStatus.ASSIGNED) return;
+    // Start work
+    if (newStatus == AssignmentStatus.IN_PROGRESS &&
+            oldStatus == AssignmentStatus.ASSIGNED) return;
 
-        if (newStatus == AssignmentStatus.COMPLETED &&
-                oldStatus == AssignmentStatus.IN_PROGRESS) return;
+    // Mark delivered
+    if (newStatus == AssignmentStatus.COMPLETED &&
+            oldStatus == AssignmentStatus.IN_PROGRESS) return;
 
-        if (newStatus == AssignmentStatus.REJECTED_BY_RECEIVER &&
-                (oldStatus == AssignmentStatus.ASSIGNED || oldStatus == AssignmentStatus.IN_PROGRESS)) return;
+    // Reject
+    if (newStatus == AssignmentStatus.REJECTED_BY_RECEIVER &&
+            (oldStatus == AssignmentStatus.ASSIGNED||oldStatus == AssignmentStatus.IN_PROGRESS)) return;
 
-        throw new RuntimeException("Invalid volunteer status transition");
-    }
+    throw new RuntimeException("Invalid volunteer status transition");
+}
+
+//    @Transactional
+//    public String updateAssignedVolunteerStatus(
+//            Long ngoId,
+//            Long assignmentId,
+//            AssignmentStatus newStatus
+//    ) {
+//
+//        VolunteerAssignmentEntity assignment =
+//                volunteerAssignmentRepository.findById(assignmentId)
+//                        .orElseThrow(() -> new RuntimeException("Volunteer assignment not found"));
+//
+//        // 🔐 Security check
+//        if (!assignment.getReceiver().getId().equals(ngoId)) {
+//            throw new RuntimeException("Not allowed");
+//        }
+//
+//        if (!assignment.isActive()) {
+//            throw new RuntimeException("Cannot update historical assignment");
+//        }
+//
+//        // Validate transition
+//        validateNgoVolunteerStatusChange(assignment.getStatus(), newStatus);
+//
+//        // Update assignment
+//        assignment.setStatus(newStatus);
+//        volunteerAssignmentRepository.save(assignment);
+//
+//        // Update volunteer request status
+//        VolunteerRequestEntity request = assignment.getVolunteerRequest();
+//        request.setStatus(mapToVolunteerOfferStatus(newStatus));
+//
+//        return "Volunteer status updated successfully";
+//    }
 
     @Transactional
     public String updateAssignedVolunteerStatus(
@@ -416,25 +759,37 @@ public class NGOProfileService {
                 volunteerAssignmentRepository.findById(assignmentId)
                         .orElseThrow(() -> new RuntimeException("Volunteer assignment not found"));
 
-        // 🔐 Security check
         if (!assignment.getReceiver().getId().equals(ngoId)) {
             throw new RuntimeException("Not allowed");
         }
 
-        if (!assignment.isActive()) {
-            throw new RuntimeException("Cannot update historical assignment");
+        VolunteerRequestEntity request = assignment.getVolunteerRequest();
+
+        validateNgoVolunteerStatusChange(
+                assignment.getStatus(),
+                newStatus
+        );
+
+        // START WORK
+        if (newStatus == AssignmentStatus.IN_PROGRESS) {
+            assignment.setStatus(AssignmentStatus.IN_PROGRESS);
+            request.setStatus(VolunteerOfferStatus.IN_PROGRESS);
         }
 
-        // Validate transition
-        validateNgoVolunteerStatusChange(assignment.getStatus(), newStatus);
+        // MARK DELIVERED
+        else if (newStatus == AssignmentStatus.COMPLETED) {
+            assignment.setStatus(AssignmentStatus.COMPLETED);
+            request.setStatus(VolunteerOfferStatus.DELIVERED);
+        }
 
-        // Update assignment
-        assignment.setStatus(newStatus);
+        // REJECT
+        else if (newStatus == AssignmentStatus.REJECTED_BY_RECEIVER) {
+            assignment.setStatus(AssignmentStatus.REJECTED_BY_RECEIVER);
+            request.setStatus(VolunteerOfferStatus.OPEN);
+        }
+
         volunteerAssignmentRepository.save(assignment);
-
-        // Update volunteer request status
-        VolunteerRequestEntity request = assignment.getVolunteerRequest();
-        request.setStatus(mapToVolunteerOfferStatus(newStatus));
+        volunteerRequestRepository.save(request);
 
         return "Volunteer status updated successfully";
     }
@@ -442,8 +797,6 @@ public class NGOProfileService {
     private VolunteerOfferStatus mapToVolunteerOfferStatus(AssignmentStatus status) {
 
         switch (status) {
-            case IN_PROGRESS:
-                return VolunteerOfferStatus.IN_PROGRESS;
 
             case COMPLETED:
                 return VolunteerOfferStatus.COMPLETED;
